--- a/index.html
+++ b/index.html
@@ -4,12 +4,16 @@
 <head>
     <title>Crystals Collector</title>
     <link rel="stylesheet" href="assets/css/style.css">
+    
     <!-- Bootstrap Reference -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
     <!-- JQuery Reference -->
     <script src="https://code.jquery.com/jquery-3.4.1.js"
         integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="assets/javascript/game.js"></script>
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 </head>
 
@@ -27,7 +31,7 @@
                     when the game starts, the game will change the value of each crystal.</p>
             </div>
         </div>
-        <div class="row">
+        <div class="row border-bottom">
             <div class="col-3">
                 <div class="card border-light mb-3">
                     <div class="card-header"><b>Random Number</b></div>
@@ -48,12 +52,12 @@
                     </div>
                 </div>
             </div>
-            <div class="col-6">
+            <div class="crystals col-6">
                 <span class="border border-light">
-                    <img src="..." alt="..." class="img-thumbnail">
-                    <img src="..." alt="..." class="img-thumbnail">
-                    <img src="..." alt="..." class="img-thumbnail">
-                    <img src="..." alt="..." class="img-thumbnail">
+                    <img id="crystal1" src="assets/images/crystal1.jpg" alt="crystal1">
+                    <img id="crystal2" src="assets/images/crystal2.jpg" alt="crystal2">
+                    <img id="crystal3" src="assets/images/crystal3.jpg" alt="crystal3">
+                    <img id="crystal4" src="assets/images/crystal4.jpg" alt="crystal4">
                 </span>
             </div>
         </div>
@@ -61,8 +65,8 @@
         <div class="row">
             <div class="col-12">
                 <span class="border border-light">
-                    <h5 class="text-center">Wins: </h5>
-                    <h5 class="text-center">Losses: </h5>
+                    <h5 class="wins text-center">Wins: </h5>
+                    <h5 class="losses text-center">Losses: </h5>
                 </span>
             </div>
         </div>
