add logic for onclick functions

--- a/index.html
+++ b/index.html
@@ -34,30 +34,28 @@
         <div class="row border-bottom">
             <div class="col-3">
                 <div class="card border-light mb-3">
-                    <div class="card-header"><b>Random Number</b></div>
+                    <div class="card-header text-center"><b>Target Number</b></div>
                     <div class="card-body">
                         <!-- <h5 class="card-title">Random Number</h5> -->
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the card's content.</p>
+                        <p class="text-center"><span id="target-number"></span></p>
                     </div>
                 </div>
             </div>
             <div class="col-3">
                 <div class="card border-light mb-3">
-                    <div class="card-header"><b>Your Score</b></div>
+                    <div class="card-header text-center"><b>Your Score</b></div>
                     <div class="card-body">
                         <!-- <h5 class="card-title">Light card title</h5> -->
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the card's content.</p>
+                        <p class="text-center"><span id="score-number"></span></p>
                     </div>
                 </div>
             </div>
             <div class="crystals col-6">
                 <span class="border border-light">
-                    <img id="crystal1" src="assets/images/crystal1.jpg" alt="crystal1">
-                    <img id="crystal2" src="assets/images/crystal2.jpg" alt="crystal2">
-                    <img id="crystal3" src="assets/images/crystal3.jpg" alt="crystal3">
-                    <img id="crystal4" src="assets/images/crystal4.jpg" alt="crystal4">
+                    <img class="crystal-image" src="assets/images/crystal1.jpg" alt="crystal1">
+                    <img class="crystal-image" src="assets/images/crystal2.jpg" alt="crystal2">
+                    <img class="crystal-image" src="assets/images/crystal3.jpg" alt="crystal3">
+                    <img class="crystal-image" src="assets/images/crystal4.jpg" alt="crystal4">
                 </span>
             </div>
         </div>
