add comments, organize functions, update html

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <title>Crystals Collector</title>
     <link rel="stylesheet" href="assets/css/style.css">
-    
+
     <!-- Bootstrap Reference -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -63,9 +63,9 @@
         <div class="row">
             <div class="col-12">
                 <span class="border border-light">
-                    <h5 class="wins text-center">Wins: </h5>
-                    <h5 class="losses text-center">Losses: </h5>
-                </span>
+                    <h5 class="text-center">Wins: </h5><span id="wins text-center"></h5>
+                        <h5 class="text-center">Losses: </h5><span id="losses text-center"></h5>
+                        </span>
             </div>
         </div>
     </div>
