change message on front page

--- a/index.html
+++ b/index.html
@@ -24,11 +24,10 @@
         </div>
         <div class="row">
             <div class="col-12">
-                <p>You will be given a random number at the start of the game. There are four crystals below. By
-                    clicking on a crystal you will add a specific amount of points to your total score. You win the game
-                    by matching your total score to a random number. You lose the game if your total score goes above
-                    the random number. The value of each crystal is hidden from you until you click on it. Each time
-                    when the game starts, the game will change the value of each crystal.</p>
+                <p>Welcome to the Crystals Collector game!  The obective of this game is to match your score to the randomly generated target number.</p>
+                <p>You will be given a random target number at the start of the game. There are four crystals below.  Each crystal holds its own random value.  The value of each crystal is hidden from you until you click on it.  By clicking on a crystal you will add a specific amount of points to your total score.</p>
+                <p>You win the game by matching your total score to a random number. You lose the game if your total score goes above the random number and the game resets.</p> 
+                <p>Each new game will change the value of the target number and the value of each crystal.</p>
             </div>
         </div>
         <div class="row border-bottom">
