--- a/index.html
+++ b/index.html
@@ -22,11 +22,24 @@
         <div class="jumbotron jumbotron-fluid bg-info text-light">
             <h1 class="display-5 text-center">Crystals Collector</h1>
         </div>
+
         <div class="row">
             <div class="col-12">
-                <p>Welcome to the Crystals Collector game!  The obective of this game is to match your score to the randomly generated target number.</p>
-                <p>You will be given a random target number at the start of the game. There are four crystals below.  Each crystal holds its own random value.  The value of each crystal is hidden from you until you click on it.  By clicking on a crystal you will add a specific amount of points to your total score.</p>
-                <p>You win the game by matching your total score to a random number. You lose the game if your total score goes above the random number and the game resets.</p> 
+                <span class="border border-light">
+                    <h4 id="status"></h4>
+                </span>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12">
+                <p>Welcome to the Crystals Collector game! The obective of this game is to match your score to the
+                    randomly generated target number.</p>
+                <p>You will be given a random target number at the start of the game. There are four crystals below.
+                    Each crystal holds its own random value. The value of each crystal is hidden from you until you
+                    click on it. By clicking on a crystal you will add a specific amount of points to your total score.
+                </p>
+                <p>You win the game by matching your total score to a random number. You lose the game if your total
+                    score goes above the random number and the game resets.</p>
                 <p>Each new game will change the value of the target number and the value of each crystal.</p>
             </div>
         </div>
@@ -62,9 +75,9 @@
         <div class="row">
             <div class="col-12">
                 <span class="border border-light">
-                    <h5 class="text-center">Wins: </h5><span id="wins text-center"></h5>
-                        <h5 class="text-center">Losses: </h5><span id="losses text-center"></h5>
-                        </span>
+                    <h5 id="wins"></h5>
+                    <h5 id="losses"></h5>
+                </span>
             </div>
         </div>
     </div>
